# nhk2023-team-a-ros-workspace

./: .gitignore  LICENSE  can_dead.txt  configuration.nix  default.rviz  fastdds.xml  flake.nix  run.bash  run_in_devshell.bash  sync-config.bash  sync.bash
nim/: default.nix
spec/com/: protocol.hpp
src/bringup/: bringup.nimble  package.xml
src/bringup/behavior_tree/: nav_through_poses.xml  nav_to_pose.xml
src/bringup/config/: can_bridge.yaml  ekf.yaml  emcl2.yaml  nav2.yaml  wall_tracer.yaml
src/bringup/launch/: all.launch.py  all.launch.xml  sim.launch.xml
src/bringup/map/: map.yaml  nav_map.yaml
src/bringup/urdf/: robot.urdf.xacro
src/can_bridge/: can_bridge.nimble  package.xml
src/can_bridge/src/: can_bridge.nim  objparamservers.nim  protocols.nim  socketcan.nim
src/commander/: package.xml  setup.py
src/commander/commander/: commander.py  utils.py  waypoints.py
src/controller_bridge/: controller_bridge.nimble  package.xml
src/controller_bridge/src/: controller_bridge.nim
src/emcl2/: CMakeLists.txt  package.xml
src/emcl2/include/emcl/: ExpResetMcl2.h  LikelihoodFieldMap.h  Mcl.h  OdomModel.h  Particle.h  Pose.h  Scan.h  emcl2_node.h  lookup_tables.h
src/emcl2/src/: ExpResetMcl2.cpp  LikelihoodFieldMap.cpp  Mcl.cpp  OdomModel.cpp  Particle.cpp  Scan.cpp  emcl2_node.cpp  lookup_tables.cpp
src/laserscan_marger/: CMakeLists.txt  package.xml
src/laserscan_marger/include/laserscan_marger/: laserscan_marger.hpp
src/laserscan_marger/src/: laserscan_marger.cpp  laserscan_marger_node.cpp
src/ldlidar/: CMakeLists.txt  package.xml
src/ldlidar/include/: cmd_interface_linux.h  ldlidar_node.h  lipkg.h
src/ldlidar/src/: cmd_interface_linux.cpp  ldlidar_node.cpp  lipkg.cpp
src/nav2_regulated_pure_pursuit_controller/: CMakeLists.txt
src/nav2_regulated_pure_pursuit_controller/src/: regulated_pure_pursuit_controller.cpp
src/path_following_controller/: config.nims  package.xml  path_following_controller.nimble
src/path_following_controller/src/: pid_controllers.nim  pure_pursuit.nim  utils.nim
src/path_generator/: package.xml  path_generator.nimble
src/path_generator/src/: grid_dijkstra.nim  path_generator.nim
src/pfloc/: package.xml  pfloc.nimble
src/pfloc/src/: pfloc.nim
src/robot_interface/: CMakeLists.txt  flake.nix  package.xml
src/robot_interface/msg/: ArmCommand.msg  PathDecision.msg  SteerUnitStates.msg
src/robot_interface/srv/: GetOver.srv
src/udp_multicast_beacon/: package.xml  setup.cfg  setup.py
src/udp_multicast_beacon/udp_multicast_beacon/: beacon.py
src/wall_tracer/: package.xml  wall_tracer.nimble
src/wall_tracer/src/: linefitting.nim  pid_controller.nim  wall_tracer.nim
